# spec-kit-arb

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-release-packages.ps1  create-release-packages.sh
docs/: docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-adr.sh  create-new-feature.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-adr.ps1  create-new-feature.ps1
src/specify_cli/: __init__.py
templates/: adr-template.md  checklist-template.md  config.json  gitignore-additions.txt  local.template.config.json  plan-template.md  spec-template.md  tasks-template.md  vscode-settings.json
templates/commands/: adr.md  analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
